# ChatAppQt

./: .gitignore  CMakeLists.txt  Main.qml  Theme.qml  ToastManager.qml
components/: AddServerButton.qml  BlurOverlay.qml  PopupMenuItem.qml  ServerIcon.qml  ThemedSwitch.qml  Toast.qml
components/auth/: AuthButton.qml  AuthForm.qml  AuthHeader.qml  AuthTextField.qml
components/dialogs/: CreateServerDialog.qml
components/dm/: DmComposer.qml  DmConversationAvatar.qml  DmHeaderBar.qml  DmHistoryIntro.qml  DmHistoryPane.qml  DmHistorySelectionController.qml  DmMessageBubble.qml
components/friends/: AddFriendPanel.qml  BlockedUserRow.qml  FriendAvatar.qml  FriendRow.qml  FriendsHeaderBar.qml  FriendsIconButton.qml  FriendsListRow.qml  FriendsTabButton.qml  FriendsTextButton.qml  PendingRequestRow.qml
src/: main.cpp
src/core/: authClient.cpp  authClient.h  dmManager.cpp  dmManager.h  friendshipManager.cpp  friendshipManager.h  networkClient.cpp  networkClient.h  presenceManager.cpp  presenceManager.h  serverManager.cpp  serverManager.h
src/helpers/: clipboardHelper.h
src/models/: blockListModel.cpp  blockListModel.h  dmConversationListModel.cpp  dmConversationListModel.h  dmMessageListModel.cpp  dmMessageListModel.h  friendListModel.cpp  friendListModel.h  pendingRequestModel.cpp  pendingRequestModel.h  serverListModel.cpp  serverListModel.h
views/: AuthView.qml  DmView.qml  FriendsView.qml  LoadingScreen.qml  MainView.qml  MidPanel.qml  SidePanel.qml
